[BUGFIX] Inspector apply button is not visible
Related: #52175
Reviewed-on: https://review.typo3.org/24203
Tested-by: Aske Ertmann
Original-Commit-Hash: ed69337595d0a54d5fe85f1339b1197963791dc9

--- a/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
@@ -476,6 +476,7 @@
 			font-size: 14px;
 			@include text-shadow(none);
 			@include box-shadow(none);
+			@include box-sizing(border-box);
 
 			&.neos-disabled,
 			&[disabled] {
