--- a/TYPO3.Neos/Resources/Public/Styles/Neos.css
+++ b/TYPO3.Neos/Resources/Public/Styles/Neos.css
@@ -7547,6 +7547,9 @@
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 .neos #neos-inspector .neos-actions button.neos-disabled, .neos #neos-inspector .neos-actions button[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
